--- a/package.json
+++ b/package.json
@@ -2,8 +2,49 @@
   "name": "@react-native-community/bob",
   "version": "0.1.0",
   "description": "CLI to build JavaScript files for React Native libraries",
-  "main": "src/index.js",
   "repository": "git@github.com:react-native-community/bob.git",
   "author": "Satyajit Sahoo <satyajit.happy@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "main": "src/index.js",
+  "bin": {
+    "bob": "bin/bob.js"
+  },
+  "files": [
+    "bin",
+    "lib"
+  ],
+  "scripts": {
+    "typescript": "tsc --noEmit",
+    "build": "babel --extensions .ts,.tsx src --out-dir lib --ignore '**/__tests__/**' --source-maps --delete-dir-on-start",
+    "watch": "yarn build --watch",
+    "prepare": "yarn build"
+  },
+  "dependencies": {
+    "@babel/core": "^7.4.0",
+    "chalk": "^2.4.2",
+    "cosmiconfig": "^5.2.0",
+    "fs-extra": "^7.0.1",
+    "glob": "^7.1.3",
+    "inquirer": "^6.2.2",
+    "is-git-dirty": "^1.0.0",
+    "metro-react-native-babel-preset": "^0.53.1",
+    "ora": "^3.3.0",
+    "yargs": "^13.2.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/babel__core": "^7.1.0",
+    "@types/chalk": "^2.2.0",
+    "@types/cosmiconfig": "^5.0.3",
+    "@types/fs-extra": "^5.0.5",
+    "@types/glob": "^7.1.1",
+    "@types/inquirer": "^6.0.0",
+    "@types/ora": "^3.2.0",
+    "@types/yargs": "^12.0.11",
+    "conventional-changelog-cli": "^2.0.12",
+    "release-it": "^10.4.0",
+    "typescript": "^3.4.1"
+  }
 }
