--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/core": "^7.4.0",
     "chalk": "^2.4.2",
     "cosmiconfig": "^5.2.0",
+    "del": "^4.1.0",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
     "inquirer": "^6.2.2",
@@ -44,6 +45,7 @@
     "@types/babel__core": "^7.1.0",
     "@types/chalk": "^2.2.0",
     "@types/cosmiconfig": "^5.0.3",
+    "@types/del": "^4.0.0",
     "@types/fs-extra": "^5.0.5",
     "@types/glob": "^7.1.1",
     "@types/inquirer": "^6.0.0",
