--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "commitlint": "^7.5.2",
     "conventional-changelog-cli": "^2.0.12",
     "husky": "^1.3.1",
+    "prettier": "^1.17.0",
     "release-it": "^10.4.0",
     "typescript": "^3.4.1"
   },
