--- a/package.json
+++ b/package.json
@@ -25,39 +25,38 @@
     "release": "release-it"
   },
   "dependencies": {
-    "@babel/core": "^7.4.0",
-    "chalk": "^2.4.2",
-    "cosmiconfig": "^5.2.0",
-    "del": "^4.1.0",
-    "fs-extra": "^7.0.1",
-    "glob": "^7.1.3",
-    "inquirer": "^6.2.2",
+    "@babel/core": "^7.7.7",
+    "chalk": "^3.0.0",
+    "cosmiconfig": "^6.0.0",
+    "del": "^5.1.0",
+    "fs-extra": "^8.1.0",
+    "glob": "^7.1.6",
+    "inquirer": "^7.0.1",
     "is-git-dirty": "^1.0.0",
-    "metro-react-native-babel-preset": "^0.53.1",
-    "yargs": "^13.2.2"
+    "metro-react-native-babel-preset": "^0.57.0",
+    "yargs": "^15.0.2"
   },
   "optionalDependencies": {
-    "jetifier": "^1.0.0-beta04.2"
+    "jetifier": "^1.6.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/preset-env": "^7.4.2",
-    "@babel/preset-typescript": "^7.3.3",
-    "@commitlint/config-conventional": "^7.5.0",
-    "@types/babel__core": "^7.1.0",
+    "@babel/cli": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-typescript": "^7.7.7",
+    "@commitlint/config-conventional": "^8.2.0",
+    "@release-it/conventional-changelog": "^1.1.0",
+    "@types/babel__core": "^7.1.3",
     "@types/chalk": "^2.2.0",
-    "@types/cosmiconfig": "^5.0.3",
     "@types/del": "^4.0.0",
-    "@types/fs-extra": "^5.0.5",
+    "@types/fs-extra": "^8.0.1",
     "@types/glob": "^7.1.1",
-    "@types/inquirer": "^6.0.0",
-    "@types/yargs": "^12.0.11",
-    "commitlint": "^7.5.2",
-    "conventional-changelog-cli": "^2.0.12",
-    "husky": "^1.3.1",
-    "prettier": "^1.17.0",
-    "release-it": "^10.4.0",
-    "typescript": "^3.4.1"
+    "@types/inquirer": "^6.5.0",
+    "@types/yargs": "^13.0.3",
+    "commitlint": "^8.2.0",
+    "husky": "^3.1.0",
+    "prettier": "^1.19.1",
+    "release-it": "^12.4.3",
+    "typescript": "^3.7.3"
   },
   "husky": {
     "hooks": {
