--- a/package.json
+++ b/package.json
@@ -26,27 +26,28 @@
     "release": "release-it"
   },
   "dependencies": {
-    "@babel/core": "^7.7.7",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-flow": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
     "chalk": "^3.0.0",
     "cosmiconfig": "^6.0.0",
     "del": "^5.1.0",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
-    "inquirer": "^7.0.1",
+    "inquirer": "^7.0.4",
     "is-git-dirty": "^1.0.0",
     "json5": "^2.1.1",
-    "metro-react-native-babel-preset": "^0.57.0",
-    "yargs": "^15.0.2"
+    "yargs": "^15.1.0"
   },
   "optionalDependencies": {
     "jetifier": "^1.6.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-typescript": "^7.7.7",
-    "@commitlint/config-conventional": "^8.2.0",
+    "@babel/cli": "^7.8.4",
+    "@commitlint/config-conventional": "^8.3.4",
     "@release-it/conventional-changelog": "^1.1.0",
     "@types/babel__core": "^7.1.3",
     "@types/chalk": "^2.2.0",
@@ -55,14 +56,14 @@
     "@types/glob": "^7.1.1",
     "@types/inquirer": "^6.5.0",
     "@types/json5": "^0.0.30",
-    "@types/yargs": "^13.0.3",
-    "commitlint": "^8.2.0",
-    "eslint": "^6.7.2",
+    "@types/yargs": "^15.0.3",
+    "commitlint": "^8.3.5",
+    "eslint": "^6.8.0",
     "eslint-config-satya164": "^3.1.5",
-    "husky": "^3.1.0",
+    "husky": "^4.2.1",
     "prettier": "^1.19.1",
     "release-it": "^12.4.3",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.5"
   },
   "husky": {
     "hooks": {
