--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "files": [
     "bin",
-    "lib"
+    "lib",
+    "templates"
   ],
   "publishConfig": {
     "access": "public",
@@ -34,12 +35,16 @@
     "@babel/preset-typescript": "^7.8.3",
     "chalk": "^3.0.0",
     "cosmiconfig": "^6.0.0",
+    "dedent": "^0.7.0",
     "del": "^5.1.0",
+    "ejs": "^3.0.1",
     "fs-extra": "^8.1.0",
+    "github-username": "^5.0.1",
     "glob": "^7.1.6",
     "inquirer": "^7.0.4",
     "is-git-dirty": "^1.0.0",
     "json5": "^2.1.1",
+    "validate-npm-package-name": "^3.0.0",
     "yargs": "^15.1.0"
   },
   "optionalDependencies": {
@@ -51,11 +56,14 @@
     "@release-it/conventional-changelog": "^1.1.0",
     "@types/babel__core": "^7.1.3",
     "@types/chalk": "^2.2.0",
+    "@types/dedent": "^0.7.0",
     "@types/del": "^4.0.0",
+    "@types/ejs": "^3.0.0",
     "@types/fs-extra": "^8.0.1",
     "@types/glob": "^7.1.1",
     "@types/inquirer": "^6.5.0",
     "@types/json5": "^0.0.30",
+    "@types/validate-npm-package-name": "^3.0.0",
     "@types/yargs": "^15.0.3",
     "commitlint": "^8.3.5",
     "eslint": "^6.8.0",
