--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-typescript": "^7.8.3",
     "chalk": "^3.0.0",
     "cosmiconfig": "^6.0.0",
+    "cross-spawn": "^7.0.1",
     "dedent": "^0.7.0",
     "del": "^5.1.0",
     "ejs": "^3.0.1",
@@ -56,6 +57,7 @@
     "@release-it/conventional-changelog": "^1.1.0",
     "@types/babel__core": "^7.1.3",
     "@types/chalk": "^2.2.0",
+    "@types/cross-spawn": "^6.0.1",
     "@types/dedent": "^0.7.0",
     "@types/del": "^4.0.0",
     "@types/ejs": "^3.0.0",
