--- a/templates/native-library/example/android/app/build.gradle
+++ b/templates/native-library/example/android/app/build.gradle
@@ -127,7 +127,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.<%= project.name %>Example"
+        applicationId "com.example.<%= project.package %>"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
