--- a/package.json
+++ b/package.json
@@ -28,26 +28,26 @@
     "release": "release-it"
   },
   "dependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-flow": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/preset-typescript": "^7.8.3",
-    "chalk": "^3.0.0",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-flow": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
+    "chalk": "^4.0.0",
     "cosmiconfig": "^6.0.0",
-    "cross-spawn": "^7.0.1",
+    "cross-spawn": "^7.0.2",
     "dedent": "^0.7.0",
     "del": "^5.1.0",
-    "ejs": "^3.0.1",
-    "fs-extra": "^8.1.0",
+    "ejs": "^3.1.2",
+    "fs-extra": "^9.0.0",
     "github-username": "^5.0.1",
     "glob": "^7.1.6",
     "inquirer": "^7.0.4",
     "is-git-dirty": "^1.0.0",
-    "json5": "^2.1.1",
+    "json5": "^2.1.3",
     "validate-npm-package-name": "^3.0.0",
-    "yargs": "^15.1.0"
+    "yargs": "^15.3.1"
   },
   "optionalDependencies": {
     "jetifier": "^1.6.5"
@@ -55,31 +55,48 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@commitlint/config-conventional": "^8.3.4",
-    "@release-it/conventional-changelog": "^1.1.0",
-    "@types/babel__core": "^7.1.3",
+    "@release-it/conventional-changelog": "^1.1.4",
+    "@types/babel__core": "^7.1.7",
     "@types/chalk": "^2.2.0",
     "@types/cross-spawn": "^6.0.1",
     "@types/dedent": "^0.7.0",
     "@types/del": "^4.0.0",
-    "@types/ejs": "^3.0.0",
-    "@types/fs-extra": "^8.0.1",
+    "@types/ejs": "^3.0.3",
+    "@types/fs-extra": "^8.1.0",
     "@types/glob": "^7.1.1",
     "@types/inquirer": "^6.5.0",
     "@types/json5": "^0.0.30",
     "@types/validate-npm-package-name": "^3.0.0",
-    "@types/yargs": "^15.0.3",
+    "@types/yargs": "^15.0.4",
     "commitlint": "^8.3.5",
     "eslint": "^6.8.0",
     "eslint-config-satya164": "^3.1.6",
-    "husky": "^4.2.1",
-    "prettier": "^1.19.1",
-    "release-it": "^12.4.3",
-    "typescript": "^3.7.5"
+    "husky": "^4.2.5",
+    "prettier": "^2.0.5",
+    "release-it": "^13.5.8",
+    "typescript": "^3.8.3"
   },
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "yarn lint && yarn typescript"
+    }
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: release ${version}",
+      "tagName": "v${version}"
+    },
+    "npm": {
+      "publish": true
+    },
+    "github": {
+      "release": true
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": "angular"
+      }
     }
   }
 }
