--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "lib",
     "templates"
   ],
+  "engines": {
+    "node": ">= 10.0.0"
+  },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
