fix: don't read babelrc by default

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-flow": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
+    "browserslist": "^4.12.0",
     "chalk": "^4.0.0",
     "cosmiconfig": "^6.0.0",
     "cross-spawn": "^7.0.2",
@@ -60,6 +61,7 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@release-it/conventional-changelog": "^1.1.4",
     "@types/babel__core": "^7.1.7",
+    "@types/browserslist": "^4.8.0",
     "@types/chalk": "^2.2.0",
     "@types/cross-spawn": "^6.0.1",
     "@types/dedent": "^0.7.0",
