feat: add JS module option (#51)
Co-authored-by: Satyajit Sahoo <satyajit.happy@gmail.com>

--- a/templates/native-library/example/android/app/build.gradle
+++ b/templates/native-library/example/android/app/build.gradle
@@ -209,7 +209,9 @@ dependencies {
         implementation jscFlavor
     }
 
+<% if (project.type !== 'js') { -%>
     implementation project(':<%= project.package %>')
+<% } -%>
 }
 
 // Run this once to be able to run the application with BUCK
