--- a/templates/native-library/example/ios/Podfile
+++ b/templates/native-library/example/ios/Podfile
@@ -53,7 +53,9 @@ target '<%= project.name %>Example' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+<% if (project.type !== 'js') { -%>
   pod '<%= project.podspec %>', :path => '../..'
+<% } -%>
 
   use_native_modules!
   
