--- a/templates/native-library/example/android/app/build.gradle
+++ b/templates/native-library/example/android/app/build.gradle
@@ -209,7 +209,7 @@ dependencies {
         implementation jscFlavor
     }
 
-<% if (project.type !== 'js') { -%>
+<% if (project.module) { -%>
     implementation project(':<%= project.package %>')
 <% } -%>
 }
