docs: add development workflow to readme
This also adds a .cmd file so that the development experience is the same for Windows users. Currently we need to make sure to run the bin with node whereas it's not necessary on Unix.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "main": "src/index.js",
   "bin": {
-    "bob": "bin/bob.js"
+    "bob": "bin/bob"
   },
   "files": [
     "bin",
