--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "fs-extra": "^9.0.1",
     "github-username": "^5.0.1",
     "glob": "^7.1.6",
-    "inquirer": "^7.0.4",
     "is-git-dirty": "^2.0.1",
     "json5": "^2.1.3",
+    "prompts": "^2.4.0",
     "validate-npm-package-name": "^3.0.0",
     "which": "^2.0.2",
     "yargs": "^15.3.1"
@@ -70,8 +70,8 @@
     "@types/ejs": "^3.0.4",
     "@types/fs-extra": "^9.0.1",
     "@types/glob": "^7.1.2",
-    "@types/inquirer": "^6.5.0",
     "@types/json5": "^0.0.30",
+    "@types/prompts": "^2.0.9",
     "@types/validate-npm-package-name": "^3.0.0",
     "@types/which": "^1.3.2",
     "@types/yargs": "^15.0.5",
