--- a/templates/example/example/android/app/build.gradle
+++ b/templates/example/example/android/app/build.gradle
@@ -37,7 +37,7 @@ import com.android.build.OutputFile
  *   // bundleInBeta: true,
  *
  *   // whether to disable dev mode in custom build variants (by default only disabled in release)
- *   // for <%= project.name %>Example: to disable dev mode in the staging build type (if configured)
+ *   // for <%- project.name %>Example: to disable dev mode in the staging build type (if configured)
  *   devDisabledInStaging: true,
  *   // The configuration property can be in the following formats
  *   //         'devDisabledIn${productFlavor}${buildType}'
@@ -64,7 +64,7 @@ import com.android.build.OutputFile
  *   // that we don't look at files in android/ or ios/ to determine whether the tasks are up to
  *   // date; if you have any other folders that you want to ignore for performance reasons (gradle
  *   // indexes the entire tree), add them here. Alternatively, if you have JS files in android/
- *   // for <%= project.name %>Example, you might want to remove it from here.
+ *   // for <%- project.name %>Example, you might want to remove it from here.
  *   inputExcludes: ["android/**", "ios/**"],
  *
  *   // override which node gets called and with what additional arguments
@@ -99,7 +99,7 @@ def enableProguardInReleaseBuilds = false
 /**
  * The preferred build flavor of JavaScriptCore.
  *
- * For <%= project.name %>Example, to use the international variant, you can use:
+ * For <%- project.name %>Example, to use the international variant, you can use:
  * `def jscFlavor = 'org.webkit:android-jsc-intl:+'`
  *
  * The international variant includes ICU i18n library and necessary data
@@ -127,7 +127,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.<%= project.package %>"
+        applicationId "com.example.<%- project.package %>"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -210,7 +210,7 @@ dependencies {
     }
 
 <% if (project.module) { -%>
-    implementation project(':<%= project.package %>')
+    implementation project(':<%- project.package %>')
 <% } -%>
 }
 
