--- a/templates/example/example/android/settings.gradle
+++ b/templates/example/example/android/settings.gradle
@@ -1,8 +1,8 @@
-rootProject.name = '<%= project.name %>Example'
+rootProject.name = '<%- project.name %>Example'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 
 <% if (project.module) { -%>
-include ':<%= project.package %>'
-project(':<%= project.package %>').projectDir = new File(rootProject.projectDir, '../../android')
+include ':<%- project.package %>'
+project(':<%- project.package %>').projectDir = new File(rootProject.projectDir, '../../android')
 <% } -%>
