--- a/templates/expo-library/example/app.json
+++ b/templates/expo-library/example/app.json
@@ -1,10 +1,10 @@
 {
-  "name": "<%= project.slug %>-example",
-  "displayName": "<%= project.name %> Example",
+  "name": "<%- project.slug %>-example",
+  "displayName": "<%- project.name %> Example",
   "expo": {
-    "name": "<%= project.slug %>-example",
-    "slug": "<%= project.podspec %>-example",
-    "description": "Example app for <%= project.slug %>",
+    "name": "<%- project.slug %>-example",
+    "slug": "<%- project.podspec %>-example",
+    "description": "Example app for <%- project.slug %>",
     "privacy": "public",
     "version": "1.0.0",
     "platforms": [
