--- a/templates/example/example/android/app/src/main/AndroidManifest.xml
+++ b/templates/example/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.example.<%= project.package %>">
+  package="com.example.<%- project.package %>">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
