--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "typescript": "tsc --noEmit",
     "build": "babel --extensions .ts,.tsx src --out-dir lib --ignore '**/__tests__/**' --source-maps --delete-dir-on-start",
-    "watch": "yarn build --watch",
+    "watch": "concurrently 'yarn typescript --watch' 'yarn build --watch'",
     "prepare": "yarn build",
     "release": "release-it"
   },
@@ -76,6 +76,7 @@
     "@types/which": "^1.3.2",
     "@types/yargs": "^15.0.5",
     "commitlint": "^8.3.5",
+    "concurrently": "^5.3.0",
     "eslint": "^7.2.0",
     "eslint-config-satya164": "^3.1.7",
     "husky": "^4.2.5",
