fix: specify correct entryFile in build.gradle
closes #98

--- a/templates/example/example/android/app/build.gradle
+++ b/templates/example/example/android/app/build.gradle
@@ -77,6 +77,7 @@ import com.android.build.OutputFile
 
 project.ext.react = [
     enableHermes: false,  // clean and rebuild if changing
+    entryFile: "index.tsx",
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
