chore: remove independent versioning
avoid breaking https://github.com/callstack/react-native-builder-bob/blob/6108d38923806d96ecddb33390f11310878ca7f5/packages/create-react-native-library/src/index.ts#L13 until we figure out a better way

--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,9 @@
+
 {
+  "version": "0.18.0",
   "packages": ["packages/*"],
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "independent",
   "command": {
     "publish": {
       "allowBranch": "main",
