--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.18.0",
+  "version": "independent",
   "packages": ["packages/*"],
   "npmClient": "yarn",
   "useWorkspaces": true,
