refactor: organize prompt to separate sections
Which languages do you want to use?
- Java & Objective-C
- Java & Swift
- Kotlin & Objective-C
- Kotlin & Swift
- C++ for both iOS & Android
- JavaScript only

For Java, Kotlin, Swift & Objective-C:

What type of library do you want to develop?
- Native module (to expose native APIs)
- Native view (to use as a component)

For JavaScript only:

What type of example app do you want to generate?
- JavaScript only (with Expo and Web support)
- Native (to use other libraries with native code)

--- a/packages/create-react-native-library/templates/example/example/android/app/build.gradle
+++ b/packages/create-react-native-library/templates/example/example/android/app/build.gradle
@@ -204,7 +204,7 @@ dependencies {
         implementation jscFlavor
     }
 
-<% if (project.module) { -%>
+<% if (project.native) { -%>
     implementation project(':<%- project.package %>')
 <% } -%>
 }
