--- a/packages/create-react-native-library/templates/example/example/ios/Podfile
+++ b/packages/create-react-native-library/templates/example/example/ios/Podfile
@@ -7,7 +7,7 @@ target '<%- project.name %>Example' do
   config = use_native_modules!
 
   use_react_native!(:path => config["reactNativePath"])
-<% if (project.module) { -%>
+<% if (project.native) { -%>
 
   pod '<%- project.podspec %>', :path => '../..'
 <% } -%>
