fix: hardcode flipper version. fixes #144

--- a/packages/create-react-native-library/templates/example/example/ios/Podfile
+++ b/packages/create-react-native-library/templates/example/example/ios/Podfile
@@ -16,7 +16,7 @@ target '<%- project.name %>Example' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!
+  use_flipper!({ 'Flipper' => '0.80.0' })
   post_install do |installer|
     flipper_post_install(installer)
   end
