--- a/packages/create-react-native-library/templates/expo-library/example/app.json
+++ b/packages/create-react-native-library/templates/expo-library/example/app.json
@@ -3,7 +3,7 @@
   "displayName": "<%- project.name %> Example",
   "expo": {
     "name": "<%- project.slug %>-example",
-    "slug": "<%- project.podspec %>-example",
+    "slug": "<%- project.identifier %>-example",
     "description": "Example app for <%- project.slug %>",
     "privacy": "public",
     "version": "1.0.0",
