fix(android): prefer downloading dependencies from Maven Central (#198)
### Summary

Recent react-native dependencies are published to Maven Central only.

### Test plan

Check if `mavenCentral` is above `jcenter` in repo structure 

More context here: https://github.com/react-native-camera/react-native-camera/issues/2490

Co-authored-by: Piotr Trocki <piotr.trocki@callstack.com>

--- a/packages/create-react-native-library/templates/example/example/android/build.gradle
+++ b/packages/create-react-native-library/templates/example/example/android/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     }
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
@@ -31,6 +32,7 @@ allprojects {
         }
 
         google()
+        mavenCentral()
         jcenter()
         maven { url 'https://www.jitpack.io' }
     }
