--- a/packages/create-react-native-library/templates/java-view-library/android/build.gradle
+++ b/packages/create-react-native-library/templates/java-view-library/android/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     if (project == rootProject) {
         repositories {
             google()
+            mavenCentral()
             jcenter()
         }
 
@@ -61,6 +62,7 @@ repositories {
         url("$rootDir/../node_modules/react-native/android")
     }
     google()
+    mavenCentral()
     jcenter()
 }
 
