--- a/packages/create-react-native-library/templates/cpp-library/android/CMakeLists.txt
+++ b/packages/create-react-native-library/templates/cpp-library/android/CMakeLists.txt
@@ -5,7 +5,7 @@ set (CMAKE_CXX_STANDARD 11)
 
 add_library(cpp
             SHARED
-            ../cpp/example.cpp
+            ../cpp/<%- project.identifier %>.cpp
             cpp-adapter.cpp
 )
 
